--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ flask-cors==4.0.1
 flask-migrate==4.0.7; python_version >= '3.6'
 flask-restful==0.3.10
 flask-sqlalchemy==3.1.1; python_version >= '3.8'
+geographiclib==2.0; python_version >= '3.7'
+geopy==2.4.1; python_version >= '3.7'
 gunicorn==22.0.0; python_version >= '3.7'
 honcho==1.1.0
 importlib-metadata==7.1.0; python_version < '3.10'
