--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ flask-restful==0.3.10
 flask-sqlalchemy==3.1.1; python_version >= '3.8'
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
+google-api-python-client==2.129.0
 gunicorn==22.0.0; python_version >= '3.7'
 honcho==1.1.0
 importlib-metadata==7.1.0; python_version < '3.10'
@@ -27,9 +28,11 @@ ipython==8.12.3; python_version >= '3.7'
 itsdangerous==2.2.0; python_version >= '3.8'
 jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.4; python_version >= '3.7'
+llama-index==0.10.37
 mako==1.3.3; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
 matplotlib-inline==0.1.7; python_version >= '3.8'
+openai==1.30.1
 packaging==24.0; python_version >= '3.7'
 parso==0.8.4; python_version >= '3.6'
 pexpect==4.9.0; sys_platform != 'win32'
@@ -53,4 +56,5 @@ typing-extensions==4.11.0; python_version >= '3.8'
 wcwidth==0.2.13
 werkzeug==3.0.3; python_version >= '3.8'
 wtforms==3.1.2; python_version >= '3.8'
+youtube-transcript-api==0.6.2
 zipp==3.18.1; python_version < '3.10'
