--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@wavesurfer/react": "^1.0.4",
+    "axios": "^1.7.2",
     "cloudinary": "^2.0.3",
     "emoji-picker-react": "^3.6.5",
     "env-cmd": "^10.1.0",
     "fomantic-ui": "^2.9.3",
     "formik": "^2.4.5",
     "gif-picker-react": "^1.3.2",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
