--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
+    "react-social-media-embed": "^2.5.13",
     "react-toastify": "^10.0.4",
     "semantic-ui-react": "^2.1.5",
     "styled-components": "^6.1.8",
