--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.7",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
