--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^10.0.4",
     "semantic-ui-react": "^2.1.5",
     "styled-components": "^6.1.8",
+    "swiper": "^11.1.9",
     "use-places-autocomplete": "^4.0.1",
     "wavesurfer.js": "^7.7.5",
     "web-vitals": "^2.1.4",
